# krishi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.dockerfile
agent/: bot.py
api/models/: requests.py  responses.py
api/routes/: chat.py  comments.py  crops.py  farmer.py  image_detection.py  market.py  posts.py  weather.py
config/: settings.py
lib/: celery.py  db.py  firebase.py  models.py  redis.py
